fix flicker

--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,6 @@ body {
 }
 #menu {
 	background-color: #5a5959;
-	display: block!important;
 	float: left;
 	height: 100%;
 	width: 165px;
